# FinDaLM

./: .gitignore  README.md  pretrain.py  pyproject.toml
.github/workflows/: format.yml
config/: deepspeed-zero1.json  deepspeed-zero2.json  deepspeed-zero3.json
findalm/: __init__.py  llama2.py
findalm/eval/: base.py  eval.py
findalm/eval/tasks/: finerord.py  fomc.py  fpb.py  headline.py
findalm/models/: __init__.py  base.py  llama.py  tokenizer.py
findalm/models/moe/: base.py  deberta_v2.py  llama.py  router.py  t5.py
findalm/pretrain/: configuration_utils.py  models.py  moe.py  train.py
findalm/pretrain/dataset/: __init__.py  create.py  load.py
tests/: __init__.py  test_llama2.py
tests/data/datasets/botchan/: data-00000-of-00001.arrow  state.json
tests/eval/: test_base.py  test_eval.py
tests/eval/tasks/: test_finerord.py  test_fomc.py  test_fpb.py  test_headline.py
tests/models/: __init__.py  base.py  test_llama.py
tests/models/moe/: test_deberta_v2.py  test_llama.py  test_router.py
tests/pretrain/: test_models.py  test_moe.py  test_train.py
tests/pretrain/dataset/: test_create.py  test_load.py
